[package]
name = "factorial"
version = "0.1.0"
edition = "2018"
authors = ["cunitac <cunitac@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs-parted-modint = { git = "https://github.com/qryxip/ac-library-rs-parted" }