[package]
name = "a"
version = "0.1.0"
edition = "2018"
authors = ["cunitac <cunitac@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = { git = "https://github.com/cunitac/procon-rs-lib" }
mininput = { git = "https://github.com/cunitac/procon-rs-lib" }
